--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -306,3 +306,104 @@
     font-weight: 500;
   }
 }
+
+
+.main {
+  width: 95%;
+  margin: 1% auto;
+  position: relative;
+  left: 10px;
+}
+
+#slider {
+  -webkit-appearance: none; 
+  width: 100%;
+  height: 7px;
+  border-radius: 3px;
+}
+
+/* Design slider button */
+#slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+  background:#e6b978;
+  border-radius:100%;
+  position: relative;
+  z-index: 3;
+}
+
+#selector {
+  height: 104px;
+  width: 48px;
+  position: absolute;
+  bottom: -20px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 2;
+}
+.selectBtn {
+  height: 100px;
+  width: 100px;
+  background-image: url(https://previews.dropbox.com/p/thumb/AA0zAgmvEVKwlRKUYUmDNoZpI54UjiqjFZkMhrgnshfbs66P7Lw1gyndpy9WpH7sADvxhbR_97g7GeYOBRsqpwluHtPLru0TSSVV66iOamH-1Ub8B1PS6i_j4VDad8D1eT17KNf03pPIMowXkgO6oUde4GLLLVr4nRl9gUp8JIg9LGmEUFTKf8q4_rddz4ZZfbspnLeEK96Jv26nfOYN9wn7Ft6VdzqhHKG3IVpX-0k7hjDlkybDao0fqNyhOySN-OqBZcr9PHq2biSxX32D4uXvf0_hakdBgWHcBYiW_EYzXohN2KGKiiJ_9b4c4fmO_h75y3NNhP6wZAcG_jfxLLJI7MmQtc3N1BqhUoR6lRftLA/p.png?fv_content=true&size_mode=5);
+  background-size: cover;
+  background-position: center;
+  border-radius: 50%;
+  position: absolute;
+  bottom: 0;
+}
+#selectValue {
+  width: 48px;
+  height: 40px;
+  position: absolute;
+  color: #b28b5c;
+  top: 0;
+  background: #525254;
+  border-radius: 4px;
+  text-align: center;
+  line-height: 45px;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+#selectValue2 {
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  top: 0;
+  background: red;
+  border-radius: 100%;
+}
+#selectValue::after {
+  content: '';
+  border-top: 17px solid #525254;
+  border-left: 24px solid transparent;
+  border-right: 24px solid transparent;
+  position: absolute;
+  bottom: -14px;
+  left: 0;
+}
+#progressBar {
+  width: 50%;
+  height: 7px;
+  background: #b28b5c;
+  border-radius: 3px;
+  position: absolute;
+  bottom: 4px;
+  left: 0;
+}
+ input{
+   background: #525254;
+   
+ }
+#progressBar {
+  width: 50%;
+  height: 7px;
+  background: #b28b5c;
+  border-radius: 3px;
+  position: absolute;
+  bottom: 4px;
+  left: 0;
+}
+
